--- a/ChoreApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/ChoreApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -45,6 +45,9 @@
             <h4>Interests</h4>
             <p>{{user.interests}}</p>
           </tab>
+          <tab heading="Photos">
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>>
+          </tab>
           <tab heading="Messages">
               <p>Messages will go here</p>
           </tab>
