--- a/ChoreApp-SPA/src/app/lists/lists.component.html
+++ b/ChoreApp-SPA/src/app/lists/lists.component.html
@@ -1,3 +1,32 @@
-<p>
-  lists works!
-</p>
+<div class="text-center mt-3">
+    <h2>{{networkParam === 'Networkers' ? 'Members who\'ve added me' : 'Members who I\'ve added'}} : {{pagination.totalItems}}</h2>
+  </div>
+
+<div class="container mt-3">
+
+  <div class="row">
+    <div class="btn-group">
+      <button class="btn btn-primary" [(ngModel)]="networkParam" btnRadio="Networkers" (click)="loadUsers()">Added me to network</button>
+      <button class="btn btn-primary" [(ngModel)]="networkParam" btnRadio="Networkees" (click)="loadUsers()">Members in my network</button>
+    </div>
+  </div>
+
+  <br>
+
+  <div class="row">
+    <div *ngFor="let user of users" class="col-sm-6 col-md-4 col-lg-4 col-xl-2">
+      <app-member-card [user]="user"></app-member-card>
+    </div>
+  </div>
+
+
+
+</div>
+
+<div class="d-flex justify-content-center">
+  <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage" [(ngModel)]="pagination.currentPage"
+    (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"
+    >
+
+  </pagination>
+</div>
