--- a/ChoreApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/ChoreApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -17,16 +17,16 @@
           </div>
           <div>
             <strong>Last Active:</strong>
-            <p>{{user.lastActive}}</p>
+            <p>{{user.lastActive | timeAgo}}</p>
           </div>
           <div>
             <strong>Member since:</strong>
-            <p>{{user.created}}</p>
+            <p>{{user.created | date: 'mediumDate'}}</p>
           </div>
         </div>
         <div class="card-footer">
           <div class="btn-group d-flex">
-            <button class="btn btn-primary w-100">Like</button>
+            <button class="btn btn-primary w-100">Add to Network</button>
             <button class="btn btn-success w-100">Message</button>
           </div>
         </div>
