--- a/ChoreApp-SPA/src/app/home/home.component.html
+++ b/ChoreApp-SPA/src/app/home/home.component.html
@@ -1,10 +1,9 @@
 <div class="container mt-5">
   <div *ngIf="!registerMode" style="text-align: center">
-    <h1>Get in touch with your family</h1>
-    <p class="lead">Come on in to view your family... All you need to do is sign up!</p>
+    <h1>Explore and connect with your fellow employees</h1>
+    <p class="lead">Come on in to view your co-workers... All you need to do is sign up!</p>
     <div class="text-center">
       <button class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
-      <button class="btn btn-info btn-lg">Learn more</button>
     </div>
   </div>
 
