--- a/ChoreApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/ChoreApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -8,11 +8,11 @@
         <img class="card-img-top img-thumbnail" src="{{user.photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}">
         <div class="card-body">
           <div>
-            <strong>Locations:</strong>
+            <strong>Corporate Location:</strong>
             <p>{{user.city}}, {{user.country}}</p>
           </div>
           <div>
-            <strong>Age:</strong>
+            <strong>Years of Exp:</strong>
             <p>{{user.age}}</p>
           </div>
           <div>
@@ -25,10 +25,7 @@
           </div>
         </div>
         <div class="card-footer">
-          <div class="btn-group d-flex">
-            <button class="btn btn-primary w-100">Add to Network</button>
-            <button class="btn btn-success w-100">Message</button>
-          </div>
+
         </div>
       </div>
     </div>
@@ -36,20 +33,17 @@
       <div class="tab-panel">
         <tabset class="member-tabset">
           <tab heading="About {{user?.knownAs}}">
-            <h4>Description</h4>
+            <h4>Bio</h4>
             <p>{{user.introduction}}</p>
-            <h4>Looking For</h4>
+            <h4>Career Goals</h4>
             <p>{{user.lookingFor}}</p>
           </tab>
-          <tab heading="Interests">
-            <h4>Interests</h4>
+          <tab heading="Skills">
+            <h4>Skills</h4>
             <p>{{user.interests}}</p>
           </tab>
           <tab heading="Photos">
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>>
-          </tab>
-          <tab heading="Messages">
-              <p>Messages will go here</p>
           </tab>
         </tabset>
       </div>
