--- a/ChoreApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/ChoreApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -19,7 +19,7 @@
               <p>{{user.city}}, {{user.country}}</p>
             </div>
             <div>
-              <strong>Age:</strong>
+              <strong>Years of Exp:</strong>
               <p>{{user.age}}</p>
             </div>
             <div>
@@ -41,13 +41,13 @@
           <tabset class="member-tabset">
             <tab heading="Edit Profile">
               <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
-                  <h4>Description</h4>
+                  <h4>Bio:</h4>
                   <textarea name="introduction" rows="6" class="form-control" [(ngModel)]="user.introduction"></textarea>
-                  <h4>Looking For</h4>
+                  <h4>Career Goals:</h4>
                   <textarea name="lookingFor" rows="6" class="form-control" [(ngModel)]="user.lookingFor"></textarea>
-                  <h4>Interests</h4>
+                  <h4>Skills:</h4>
                   <textarea name="interests" rows="6" class="form-control" [(ngModel)]="user.interests"></textarea>
-                  <h4>Location Details:</h4>
+                  <h4>Corporate Location:</h4>
                   <div class="form-inline">
                     <label for="city">City</label>
                     <input class="form-control" type="text" name="city" [(ngModel)]="user.city">
