--- a/ChoreApp-SPA/src/app/nav/nav.component.html
+++ b/ChoreApp-SPA/src/app/nav/nav.component.html
@@ -4,17 +4,13 @@
 
       <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/members']">Relatives </a>
+          <a class="nav-link" [routerLink]="['/members']">Employees </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/lists']">Lists</a>
+          <a class="nav-link" [routerLink]="['/lists']">Network Lists</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/messages']">Messages</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" [routerLink]="['/chores']">Chores</a>
-        </li>
+
+
 
   
       </ul>
